# laboratorio

./: README.md  biblio.md  introduzione.md  summary_part_i.md  summary_part_ii.md
deprecated/animazioni/: rimbalzo.c  rimbalzo2D-3-vett-py.py  rimbalzo2D-3.c  rimbalzo2D.c
deprecated/animazioni_bis/: movimento.c
deprecated/ncurses/: stringhevolanti.c
esempi/tipi_avanzati_del_C/: puntatori.c  vettori.c
esercizi/banconote/: banconote.py
esercizi/c_math/: fattoriale.c
esercizi/caratteri/: test2.txt  test3.txt
esercizi/chicago/: Makefile  chicago.c  main.c  player.c  player.h
esercizi/css/: box.html  doc.html  floating.html  fonts.html  grouping.html  moon.html  parent-child.html  pseudo.html  text.html  two-aside.html  units.html
esercizi/endurance/: endurance.py
esercizi/funzioni/: conversioni.c  conversioni2.c  distanza.py  invertecifre.c  raddoppia1.c  swap.c
esercizi/html/: index.html
esercizi/intro-css/: ricetta.html  sport.html  style.css
esercizi/intro-html/: index.html
esercizi/introduzione_HTML/: login.html
esercizi/introduzione_a_NCurses/: .gitignore  hello.c  somma.c
esercizi/introduzione_al_linguaggio_C/: .gitignore  cerchio.c  fullname.c  operazioni.c  somma_cifre.c
esercizi/introduzione_alla_programmazione/: cubo.py  doppio.py  hello.py  mancia.py  paridisp.py  primogrado.py  sfera.py
esercizi/iterazione_c/: .gitignore  basi.c  binario.c  caratteri.c  cifra.c  countdown.c  cripta.c  fattoriale.c  massimo.c  quadrato.c  sequenze.c  sommaprodotto.c  tabelline.c
esercizi/iterazione_py/: lista.py  tabelline.py
esercizi/liste/: caesar.py  decadimento.py  plot.py
esercizi/no-term/: thesum.py
esercizi/part-iv/cmake/radice/: CMakeLists.txt  radice.c
esercizi/part-iv/cmake/random/: CMakeLists.txt  main.c
esercizi/part-iv/cmake/random/random/: CMakeLists.txt
esercizi/part-iv/cmake/simpletron/: CMakeLists.txt  main.c
esercizi/part-iv/cmake/simpletron/libs/: CMakeLists.txt
esercizi/part-iv/cmake/simpletron/libs/cpu/: CMakeLists.txt  cpu.c  cpu.h
esercizi/part-iv/cmake/simpletron/libs/memory/: CMakeLists.txt  memory.c  memory.h
esercizi/part-iv/cmake/simpletron/libs/simpletron/: CMakeLists.txt  simpletron.c  simpletron.h
esercizi/part-iv/cmake/simpletron/tests/: CMakeLists.txt  testCpu.c  testMemory.c
esercizi/part-iv/cmake/vect/: CMakeLists.txt  main.c
esercizi/part-iv/cmake/vect/lib/: CMakeLists.txt
esercizi/part-iv/cmake/vect/lib/myvect/: CMakeLists.txt
esercizi/part-iv/cmake/vect/lib/myvect_math/: CMakeLists.txt  myvect_math.c
esercizi/part-iv/cmake/vect/lib/myvect_search/: CMakeLists.txt  myvect_search.h
esercizi/part-iv/cmake/vect/lib/myvect_sort/: CMakeLists.txt  myvect_sort.c
esercizi/part-iv/cmake/vect/lib/myvect_utils/: CMakeLists.txt  myvect_utils.c
esercizi/part-iv/cmake/vect/lib/random/: CMakeLists.txt  random0.h
esercizi/part-iv/cmake/vect/libs/: CMakeLists.txt
esercizi/part-iv/cmake/vect/libs/myvect/: CMakeLists.txt  myvect.c  myvect.h
esercizi/part-iv/cmake/vect/libs/myvect_math/: CMakeLists.txt  myvect_math.c
esercizi/part-iv/cmake/vect/libs/myvect_search/: CMakeLists.txt
esercizi/part-iv/cmake/vect/libs/myvect_sort/: CMakeLists.txt
esercizi/part-iv/cmake/vect/libs/myvect_utils/: CMakeLists.txt  myvect_utils.h
esercizi/part-iv/cmake/vect/libs/random/: CMakeLists.txt
esercizi/part-iv/coordinate/coordinate/: CMakeLists.txt  main.c
esercizi/part-iv/coordinate/coordinate/coordinate/: CMakeLists.txt  coordinate.c
esercizi/part-iv/coordinate/coordinate/diff_longitudine/: CMakeLists.txt  diff_longitudine.c  diff_longitudine.h
esercizi/part-iv/coordinate/coordinate/latitudine/: CMakeLists.txt  latitudine.c
esercizi/part-iv/coordinate/coordinate/longitudine/: longitudine.c  longitudine.h
esercizi/part-iv/coordinate/coordinate/tests/: CMakeLists.txt  FindCUnit.cmake  testLatitudine.c
esercizi/part-iv/coordinate/coordinate2/: CMakeLists.txt
esercizi/part-iv/coordinate/coordinate2/coordinata_generica/: CMakeLists.txt  coordinata_generica.c  coordinata_generica.h
esercizi/part-iv/coordinate/coordinate2/coordinate/: coordinate.h
esercizi/part-iv/coordinate/coordinate2/diff_latitudine/: CMakeLists.txt  diff_latitudine.h
esercizi/part-iv/coordinate/coordinate2/diff_longitudine/: CMakeLists.txt  diff_longitudine.h
esercizi/part-iv/coordinate/coordinate2/latitudine/: CMakeLists.txt  latitudine.c  latitudine.h
esercizi/part-iv/coordinate/coordinate2/longitudine/: CMakeLists.txt  longitudine.c  longitudine.h
esercizi/part-iv/coordinate/coordinate2/tests/: CMakeLists.txt  testCoordinate.c
esercizi/part-iv/coordinate/diff_latitudine/: CMakeLists.txt  main.c
esercizi/part-iv/coordinate/diff_latitudine/diff_latitudine/: diff_latitudine.c
esercizi/part-iv/coordinate/diff_latitudine/str_utils/: CMakeLists.txt  str_utils.h
esercizi/part-iv/coordinate/diff_latitudine/tests/: testLatitudine.c
esercizi/part-iv/coordinate/input_latitudine/: CMakeLists.txt  main.c
esercizi/part-iv/coordinate/input_latitudine/latitudine/: CMakeLists.txt  latitudine.c
esercizi/part-iv/coordinate/input_latitudine/str_utils/: CMakeLists.txt
esercizi/part-iv/coordinate/input_latitudine/tests/: testLatitudine.c
esercizi/part-iv/coordinate/latlong/tests/: CMakeLists.txt  testDiffLatitudine.c  testDiffLongitudine.c  testLongitudine.c
esercizi/part-iv/latitudine/input_latitudine/: CMakeLists.txt  main.c
esercizi/part-iv/latitudine/input_latitudine/latitudine/: latitudine.c  latitudine.h
esercizi/part-iv/latitudine/input_latitudine/str_utils/: str_utils.c
esercizi/part-iv/latitudine/input_latitudine/tests/: testLatitudine.c
esercizi/random/: dado.py  rand.c
esercizi/ricerche/: terzogradobisezione.py  terzogradoforzabruta.py
esercizi/ricorsione/: Makefile  potenza.c  potenza.py  potenzacoda.c  reverse.c  sommacoda.c
esercizi/stringhe/: .gitignore  concat.c  conversioni.c  input_from_string.c  rot13.py  tokenize.c
part-i/: letture.md  summary.md
part-i/esame/: esercizi.md
part-ii/: summary.md
slim/: introduzione.md  letture.md
vecchi dialoghi/: biblio.md  introduzione.md
(+869 files in other folders)
